##########################
# Setup.py Configuration #
##########################
[metadata]
name = missing_data_multitask_methods
version = 0.1.0
long_description = file: README.md

# Search tags
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =

[options]
install_requires =
    numpy
    pandas
    sklearn
    scipy
    tensorflow < 2.0.0
    # macau @ git+https://github.com/jaak-s/macau.git
    matplotlib

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.5

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
